time-level-update

--- a/emoji.html
+++ b/emoji.html
@@ -33,13 +33,13 @@
                 <figure>
                     <img src="képek/óra.png">
                 </figure>
-                <p>45'</p>
+                <p>90'</p>
             </div>
             <div class="informacio-szint">
                 <figure>
                     <img src="képek/csillag.png">
                 </figure>
-                <p>könnyű</p>
+                <p>nehéz</p>
             </div>
 
             <h3>A játék célja</h3>
