--- a/index.html
+++ b/index.html
@@ -219,6 +219,33 @@
             <p>Tudtad, hogy ha rákoppintasz az Instagramon&reg; egy üzenetben elküldött emojira, akkor elindul egy játék? Ma ezt <b>Pong-típusú játékot</b> készítheted el.</p>
         </div>
 
+        <div class="anyag">
+            <h2>7. Almaszüret 🍎</h2>
+
+            <div class="informacio-ido">
+                <figure>
+                    <img src="képek/óra.png">
+                </figure>
+                <p>90'</p>
+            </div>
+            <div class="informacio-szint">
+                <figure>
+                    <img src="képek/csillag.png">
+                </figure>
+                <p>közepes</p>
+            </div>
+
+            <a href="alma.html">
+                <div class="megtekintes-gomb">
+                    <p>Megtekintés</p>
+                </div>
+            </a>
+
+            <h3>A játék célja</h3>
+            <p>Indulhat az almaszüret? Kapj el annyi <b>piros almát</b>, amennyit csak tudsz, <b>ne hagyj ki</b> egyet se! Szerezz minél több pontot, de vigyázz, mert a <b>romlott alma</b> véget vet a játéknak...</p>
+            <p>Ebben a projektben megismerkedhetsz a <b>klónozás</b>sal, hogy végtelen sok almát tudj elkapni.</p>
+        </div>
+
     </main>
 
     <footer>
