Interaktív példa href update

--- a/emoji.html
+++ b/emoji.html
@@ -45,7 +45,7 @@
             <h3>A játék célja</h3>
             <p>Tudtad, hogy ha rákoppintasz az Instagramon&reg; egy üzenetben elküldött emojira, akkor elindul egy játék? Ma ezt <b>Pong-típusú játékot</b> készítheted el.</p>
             
-            <a href="../7 Emoji Pong/index.html">
+            <a href="7 Emoji Pong/index.html">
                 <div class="megtekintes-gomb">
                     <p>Interaktív példa</p>
                 </div>
