--- a/alma.html
+++ b/alma.html
@@ -87,7 +87,7 @@
             
             <h3>JavaScript</h3>
 
-            <p>Töltsük le a <a href="../8 Almaszüret kiindulás/index.js">kiindulófájlt</a> és nézzük meg, mely kódrészek állnak rendelkezésünkre és melyeket kell még nekünk megírni!</p>
+            <p>Töltsük le a <a href="8 Almaszüret kiindulás/index.js">kiindulófájlt</a> és nézzük meg, mely kódrészek állnak rendelkezésünkre és melyeket kell még nekünk megírni!</p>
 
             <p>Rendelkezésre áll:</p>
 
