--- a/index.html
+++ b/index.html
@@ -246,6 +246,32 @@
             <p>Ebben a projektben megismerkedhetsz a <b>klónozás</b>sal, hogy végtelen sok almát tudj elkapni.</p>
         </div>
 
+        <div class="anyag">
+            <h2>8. Hopposaurus 🦖</h2>
+
+            <div class="informacio-ido">
+                <figure>
+                    <img src="képek/óra.png">
+                </figure>
+                <p>90'</p>
+            </div>
+            <div class="informacio-szint">
+                <figure>
+                    <img src="képek/csillag.png">
+                </figure>
+                <p>közepes</p>
+            </div>
+
+            <a href="hopposaurus.html">
+                <div class="megtekintes-gomb">
+                    <p>Megtekintés</p>
+                </div>
+            </a>
+
+            <h3>A játék célja</h3>
+            <p>Készítsd el ezt a <b>híres webes játékot</b>, a <a href="https://chromewebstore.google.com/detail/chrome-dino-game-offline/neocimmfcfbaakogchpijngkimaigcgj" target="_blank">Chrome Dino Game</a>-et és gyakorold a <b>tömb</b>ök használatát, valamint a <b>dínók klónozását</b>! Te vajon hány <b>kaktusz</b>t tudsz átugrani úgy, hogy közben <b>gyorsul</b> a játék? Próbáld ki!</p>
+        </div>
+
     </main>
 
     <footer>
